fix colors alignment

--- a/src/template/sass-kss/modules/_colors-render.scss
+++ b/src/template/sass-kss/modules/_colors-render.scss
@@ -1,4 +1,4 @@
-#section-colors-woorank-colors .modifier__item[id*="-darker-"] {
+#section-colors-woorank-colors .modifier__item[id*="-dark-"]:not([id*="-grey-"]) {
   clear: left;
 }
 
